# byu-motor

./: .gitignore  .gitmessage.txt  README.md  environment.yml  pyproject.toml  quick_train_val.py
motor_det/: __init__.py  config.py
motor_det.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
motor_det/callbacks/: freeze_backbone.py  val_console_logger.py
motor_det/data/: dataset.py  module.py  sliding_window.py
motor_det/data/detection/: __init__.py  detection_dataset.py  instance_crop_dataset.py  mixin.py  random_crop_dataset.py  sliding_window_dataset.py
motor_det/engine/: infer.py  lit_module.py  train.py
motor_det/loss/: losses.py
motor_det/metrics/: det_metric.py
motor_det/model/: backbone.py  head.py  net.py
motor_det/models/: __init__.py  detection_head.py  task_aligned_assigner.py
motor_det/optim/: __init__.py  cosine_with_warmup.py
motor_det/postprocess/: decoder.py
motor_det/tests/: measure_performance.py  test.ipynb  test_quick_train.py
motor_det/utils/: __init__.py  augment.py  collate.py  event_reader.py  target.py  tile.py  voxel.py
segmentation/notebooks/: 1_preprocessing.ipynb  2_EDA.ipynb  3_segmentation_train.ipynb  4_train.ipynb  test.ipynb
segmentation/src/: inference.py  train.py
segmentation/src/configs/: cfg_motor_effb3.py  cfg_motor_resnet34.py  common_config.py
segmentation/src/datasets/: motor_dataset.py  prepare_data.py  sampler.py
segmentation/src/metrics/: metric_motor.py
segmentation/src/models/: losses.py  mdl_motor.py  mdl_motor_effb3.py  mixup.py
segmentation/src/postprocess/: pp_motor.py  (+1 more)
(+18 files in other folders)
