[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motor_det"
version = "0.0.1"
description = "BYU motor detection pipeline"
authors = [{name = "Your Name"}]
dependencies = [
    "numpy",
    "torch",
    "lightning",
    "monai",
    "pandas",
    "zarr"
]

[tool.setuptools]
packages = ["motor_det"]          # ★ motor_det 하나만 설치하도록 고정
